# VyasaForge

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
chapters/: README.md
configs/: active-handbook.txt  handbook.yaml  phase1.example.json  providers.yaml
diagrams/: chapter-01.json  chapter-02.json  chapter-03.json  chapter-04.json  chapter-05.json  chapter-06.json  chapter-07.json  chapter-08.json  chapter-09.json  chapter-10.json  chapter-11.json  chapter-12.json
docs/: architecture.md  branding.md  open-source-readiness.md  open-source-summary.md  rebrand-summary.md  release-checklist.md  roadmap.md  vision.md
logs/: llm-usage.jsonl
output/: AppSec_Authentication_Authorization_Handbook_Phase1.docx  ~$pSec_Authentication_Authorization_Handbook_Phase1.docx
prompts/: chapter_expert_enhancement.md  chapter_generation.md  chapter_references.md  chapter_review.md  chapter_revision.md  diagram_plan.md  handbook_planning.md  sketchnote_plan.md  toc_clarification.md  toc_update.md
reports/: handbook-qa.md
reviews/: chapter-01-enhancement-failed.md  chapter-01-references-failed.md  chapter-01-review.json  chapter-01-review.md  chapter-01-revision-failed.md  chapter-02-enhancement-failed.md  chapter-02-references-failed.md  chapter-02-review.json  chapter-02-review.md  chapter-02-revision-failed.md  chapter-03-enhancement-failed.md  chapter-03-references-failed.md  chapter-03-review.json  chapter-03-review.md  chapter-03-revision-failed.md  chapter-04-enhancement-failed.md  chapter-04-references-failed.md  chapter-04-review.json  chapter-04-review.md  chapter-04-revision-failed.md  chapter-05-enhancement-failed.md  chapter-05-references-failed.md  chapter-05-review.json  chapter-05-review.md  chapter-05-revision-failed.md  chapter-06-enhancement-failed.md  chapter-06-references-failed.md  chapter-06-review.json  (+31 more)
(+219 files in other folders)
