[project]
name = "vyasaforge"
version = "0.1.0"
description = "Forge structured knowledge into publishable documents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Surya Vass", email = "pvass25@users.noreply.github.com" },
]
dependencies = [
    "litellm>=1.0",
    "pydantic>=2.0",
    "python-docx>=1.1",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.scripts]
vyasaforge = "src.cli:app"
vf = "src.cli:app"
appsec-handbook-agent = "src.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]
